ml-engineer/seldon_v2/infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: seldon-system-v2
  labels:
    name: seldon-system-v2
